syntax = "proto3";

package userinfo;
option go_package="./userinfo";

message UserinfoReq {
  string user_id = 1; // 用户id
}

message UserinfoRes {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  User user = 3;         // 用户信息
}

message User {
  string id = 1;             // 用户id
  string name = 2;          // 用户名称
  optional int64 follow_count = 3;   // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5;       // true-已关注，false-未关注
}

service Userinfo {
  rpc getUser(UserinfoReq) returns(UserinfoRes);
}