syntax = "proto3";

package video;
option go_package = "./video";

message PublishVideoReq {
  string token = 1;
  bytes data = 2;
  string title = 3;
}

message PublishVideoResp {
  int32 status_code = 1;
  string status_msg = 2;
}

message GetVideoReq {
  int64 latest_time = 1; // 存疑，apifox为string，飞书文档为int64
  string token = 2;
}

message GetVideoResp {
  int32 status_code = 1;
  string status_msg = 2;
  repeated Video video_list = 3;
  int64 next_time = 4;
}

message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

message User {
  string id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

service VideoService {
  rpc PublishVideo(PublishVideoReq) returns (PublishVideoResp);
  rpc GetVideo(GetVideoReq) returns (GetVideoResp);
}